# goods-receive-notifier-app

./: .gitignore  README.md  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: ci_develop.yml
env/: Dockerfile  Dockerfile_prd  env.md  requirements.txt  requirements_dev.txt
notifier_app/: app.py  constant.py  logging.json  mypy.ini  pyproject.toml
notifier_app/models/: model.py
